--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </li>
 
           <li class="navigation-user-item">
-            <input class="button navigation-user-registration" type="button" value="ХОЧУ СЮДА!">
+            <input class="button navigation-user-registration" type="button" value="Хочу сюда!">
           </li>
         </ul>
 
@@ -53,7 +53,7 @@
     <main class="main-index">
       <div class="welcome-image-background">
         <h1 class="visually-hidden">Город Седона</h1>
-        <img class="main-wellcome-to-sedona-img" src="images/welcome.svg" width="458" height="352" alt="Wellocme-to-the-gargeous-SEDONA-becouse-the-grand-canyon-sucks">
+        <img class="main-wellcome-to-sedona-img" src="images/welcome-main.svg" width="458" height="352" alt="Wellocme-to-the-gargeous-SEDONA-becouse-the-grand-canyon-sucks">
       </div>
 
 
