--- a/index.html
+++ b/index.html
@@ -8,156 +8,165 @@
   </head>
 
   <body>
+    <div class="page-container">
+      <header class="main-header">
+        <a class="navigation-logo" href="index.html">
+          <img class="page-header-logo" src="images/logo.svg" width="140" height="70" alt="логотип Sedona" aria-current="page">
+        </a>
+        <nav class="header-navigation">
 
-    <header class="main-header">
-      <nav class="header-navigation">
+          <ul class="header-navigation-list">
+            <li class="header-navigation-item">
+              <a class="header-navigation-link" href="#">Главная</a>
+            </li>
+            <li class="header-navigation-item">
+              <a class="header-navigation-link" href="#">О Седоне</a>
+            </li>
+            <li class="header-navigation-item">
+              <a class="header-navigation-link" href="catalog.html">Гостинницы</a>
+            </li>
+          </ul>
 
-        <ul class="header-navigation-list">
-          <li class="header-navigation-link">
-            <a class="navigation-logo" href="index.html">
-              <img class="page-header-logo" src="images/logo.svg" width="140" height="70" alt="логотип Sedona" aria-current="page">
+          <ul class="navigation-user-menu">
+
+            <li class="navigation-user-item navigation-search">
+              <a class="navigation-user-link" href="#">
+                <img class="navigation-user-img" src="images/Search.svg" width="19" height="19" alt="Поиск гостинницы">
+                <span class="visually-hidden">Поиск</span>
+              </a>
+            </li>
+
+            <li class="navigation-user-item navigation-favorites">
+              <a class="navigation-user-link" href="#">
+                <img class="navigation-user-img" src="images/favorites.svg" width="18" height="17" alt="Избранное">
+                <span class="visually-hidden">Избранное</span>
+              </a>
+            </li>
+
+            <li class="navigation-user-item navigation-registration">
+              <input class="button navigation-user-registration" type="button" value="Хочу сюда!">
+            </li>
+          </ul>
+
+        </nav>
+      </header>
+
+      <main class="main-index main-container">
+        <div class="welcome-image-background">
+          <h1 class="visually-hidden">Город Седона</h1>
+          <img class="main-wellcome-to-sedona-img" src="images/welcome-main.svg" width="458" height="352" alt="Wellocme-to-the-gargeous-SEDONA-becouse-the-grand-canyon-sucks">
+        </div>
+
+
+        <section class="main-advantages">
+          <h2 class="visually-hidden">Преимущества</h2>
+          <span class="main-title">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</span>
+          <p class="main-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+
+          <ul class="advantages-list">
+            <li class="advantages-item advantages-item-big">
+                <div class="advantages-item-text-container">
+                  <span class="advantages-item-title pseudo-elements-light">Настоящий<br>городок</span>
+                  <p class="advantages-item-text"> Седона — не аттракцион для<br>туристов,там течёт своя<br>жизнь</p>
+                </div>
+              <img class= "advantages-item-img" src="images/town.jpg" width='800' height='385' alt="вид на отель">
+            </li>
+            <li class="advantages-item">
+              <div class="advantages-item-text-container">
+                <span class="advantages-item-title pseudo-elements-dark">Небольшая<br>площадь</span>
+                <p class="advantages-item-text">Все достопримечательности<br>находятся очень близко</p>
+              </div>
+            </li>
+            <li class="advantages-item">
+              <div class="advantages-item-text-container">
+                <span class="advantages-item-title pseudo-elements-dark">Красивая<br>дорога</span>
+                <p class="advantages-item-text">Ехать в Седону из Лас-Вегаса<br>совсем не скучно!</p>
+              </div>
+            </li>
+            <li class="advantages-item">
+              <div class="advantages-item-text-container">
+                <span class="advantages-item-title pseudo-elements-dark">Мало<br>туристов</span>
+                <p class="advantages-item-text">Большинство едет в Гранд<br>Каньон и толпится там</p>
+              </div>
+            </li>
+            <li class="advantages-item advantages-item-big">
+              <img class="advantages-item-img" src="images/devil's-bridge.jpg" width='800' height='385' alt="вид на каньон">
+              <div class="advantages-item-text-container pseudo-elements-relative-dark">
+                <span class="advantages-item-title pseudo-elements-light">Там есть<br>мост дьявола</span>
+                <p class="advantages-item-text">Да, по нему можно пройти!<br>Если вы осмелитесь,<br>разумеется</p>
+              </div>
+            </li>
+          </ul>
+        </section>
+
+        <section class="infrastructure">
+          <h2 class="visually-hidden">Инфраструктура</h2>
+          <span class="main-title infrastructure-title">Приезжайте в Седону отдохнуть<br>в комфорте и уюте!</span>
+          <p class="main-text infrastructure-text">Опытный персонал и качественное обслуживание!</p>
+          <ul class="main-infrastructure-list">
+            <li class="main-infrastructure-item infrastructure-item-light">
+              <img class="main-infrastructure-img" src="images/advantages/advantage-housing.svg" width="76" height="72" alt="домик">
+              <span class="main-infrastructure-title">ЖИЛЬЁ</span>
+              <p class="main-infrastructure-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            </li>
+            <li class="main-infrastructure-item">
+              <img class="main-infrastructure-img" src="images/advantages/advantage-food.svg" width="75" height="70" alt="еда">
+              <span class="main-infrastructure-title">ЕДА</span>
+              <p class="main-infrastructure-text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            </li>
+            <li class="main-infrastructure-item infrastructure-item-light">
+              <img class="main-infrastructure-img" src="images/advantages/advantage-surprise.svg" width="65" height="76" alt="сувениры">
+              <span class="main-infrastructure-title">СУВЕНИРЫ</span>
+              <p class="main-infrastructure-text">Не только китайского, но и настоящего местного производства!</p>
+            </li>
+          </ul>
+        </section>
+
+        <section class="main-hotel-search">
+          <h2 class="visually-hidden">Найти гостинницу</h2>
+          <span class="main-title search-hotel-title">ЗАИНТЕРЕСОВАЛИСЬ?</span>
+          <p class="main-text search-hotel-text">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <button class="button search-hotel">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
+        </section>
+
+        <section class="main-newsletter">
+          <h2 class="main-title newsletter-title">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h2>
+          <p class="main-text newsletter-text">Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
+          <form class="newsletter-form" action="https://echo.htmlacademy.ru" method="get">
+            <input class="newsletter-input" type="text" placeholder="Ваш e-mail">
+            <input class="newsletter-submit" type="submit" value="ПОДПИСАТЬСЯ">
+          </form>
+        </section>
+
+      </main>
+
+      <footer class="main-footer">
+        <ul class="social-media-list">
+          <li class="social-media-item">
+            <span class="visually-hidden">вконтакте</span>
+            <a class="social-media-link media-vk" href="#">
+              <img class="social-media-img" src="images/social-links/vk.svg" width="25" height="15" alt="лого vk">
             </a>
           </li>
-          <li class="header-navigation-item">
-            <a class="header-navigation-link" href="#">Главная</a>
-          </li>
-          <li class="header-navigation-item">
-            <a class="header-navigation-link" href="#">О Седоне</a>
-          </li>
-          <li class="header-navigation-item">
-            <a class="header-navigation-link" href="catalog.html">Гостинницы</a>
-          </li>
-        </ul>
-
-        <ul class="navigation-user-menu">
-
-          <li class="navigation-user-item">
-            <a class="navigation-user-link" href="#">
-              <img class="navigation-user-img" src="images/Search.svg" width="19" height="19" alt="Поиск гостинницы">
-              <span class="visually-hidden">Поиск</span>
+          <li class="social-media-item">
+            <span class="visually-hidden">телеграм</span>
+            <a class="social-media-link media-telegram" href="#">
+              <img class="social-media-img" src="images/social-links/telegram.svg" width="18" height="16" alt="лого telegram">
             </a>
           </li>
-
-          <li class="navigation-user-item">
-            <a class="navigation-user-link" href="#">
-              <img class="navigation-user-img" src="images/favorites.svg" width="18" height="17" alt="Избранное">
-              <span class="visually-hidden">Избранное</span>
+          <li class="social-media-item">
+            <span class="visually-hidden">youtube</span>
+            <a class="social-media-link media-youtube" href="#">
+              <img class="social-media-img" src="images/social-links/youtube.svg" width="23" height="18" alt="лого youtube">
             </a>
           </li>
-
-          <li class="navigation-user-item">
-            <input class="button navigation-user-registration" type="button" value="Хочу сюда!">
-          </li>
         </ul>
-
-      </nav>
-    </header>
-
-    <main class="main-index">
-      <div class="welcome-image-background">
-        <h1 class="visually-hidden">Город Седона</h1>
-        <img class="main-wellcome-to-sedona-img" src="images/welcome-main.svg" width="458" height="352" alt="Wellocme-to-the-gargeous-SEDONA-becouse-the-grand-canyon-sucks">
-      </div>
-
-
-      <section class="main-advantages">
-        <h2 class="visually-hidden">Преимущества</h2>
-        <span class="main-title">Седона — небольшой городок в Аризоне,заслуживающий большего!</span>
-        <p class="main-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-
-        <ul class="advantages-list">
-          <li class="advantages-item">
-            <span class="advantages-item-title">Настоящий городок</span>
-            <p class="advantages-item-text"> Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img class= "advantages-item-img" src="images/town.jpg" width='800' height='385' alt="вид на отель">
-          </li>
-          <li class="advantages-item">
-            <span class="advantages-item-title">Небольшая площадь</span>
-            <p class="advantages-item-text">Все достопримечательности находятся очень близко</p>
-          </li>
-          <li class="advantages-item">
-            <span class="advantages-item-title">Красивая дорога</span>
-            <p class="advantages-item-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="advantages-item">
-            <span class="advantages-item-title">Мало туристов</span>
-            <p class="advantages-item-text">Большинство едет в Гранд Каньон и толпится там</p>
-          </li>
-          <li class="advantages-item">
-            <img class="advantages-item-img" src="images/devil's-bridge.jpg" width='800' height='385' alt="вид на каньон">
-            <span class="advantages-item-title">Там есть мост дьявола</span>
-            <p class="advantages-item-text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-          </li>
-        </ul>
-      </section>
-
-      <section class="infrastructure">
-        <h2 class="visually-hidden">Инфраструктура</h2>
-        <span class="main-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</span>
-        <p class="main-text">Опытный персонал и качественное обслуживание!</p>
-        <ul class="main-infrastructure-list">
-          <li class="main-infrastructure-item">
-            <img class="main-infrastructure-img" src="images/advantages/advantage-housing.svg" width="76" height="72" alt="домик">
-            <span class="main-infrastructure-title">ЖИЛЬЁ</span>
-            <p class="main-infrastructure-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-          </li>
-          <li class="main-infrastructure-item">
-            <img class="main-infrastructure-img" src="images/advantages/advantage-food.svg" width="75" height="70" alt="еда">
-            <span class="main-infrastructure-title">ЕДА</span>
-            <p class="main-infrastructure-text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-          </li>
-          <li class="main-infrastructure-item">
-            <img class="main-infrastructure-img" src="images/advantages/advantage-surprise.svg" width="65" height="76" alt="сувениры">
-            <span class="main-infrastructure-title">СУВЕНИРЫ</span>
-            <p class="main-infrastructure-text">Не только китайского, но и настоящего местного производства!</p>
-          </li>
-        </ul>
-      </section>
-
-      <section class="main-hotel-search">
-        <h2 class="visually-hidden">Найти гостинницу</h2>
-        <span class="main-title">ЗАИНТЕРЕСОВАЛИСЬ?</span>
-        <p class="main-text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <button class="button search-hotel">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
-      </section>
-
-      <section class="main-newsletter">
-        <h2 class="main-title newsletter-title-сфф">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h2>
-        <p class="main-text newsletter-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form class="newsletter-form" action="https://echo.htmlacademy.ru" method="get">
-          <input class="newsletter-input" type="text" placeholder="Ваш e-mail">
-          <input class="newsletter-submit" type="submit" value="ПОДПИСАТЬСЯ">
-        </form>
-      </section>
-
-    </main>
-
-    <footer class="main-footer">
-      <ul class="social-media-list">
-        <li class="social-media-item">
-          <span class="visually-hidden">вконтакте</span>
-          <a class="social-media-link" href="#">
-            <img class="social-media-img" src="images/social-links/vk.svg" width="25" height="15" alt="лого vk">
-          </a>
-        </li>
-        <li class="social-media-item">
-          <span class="visually-hidden">телеграм</span>
-          <a class="social-media-link" href="#">
-            <img class="social-media-img" src="images/social-links/telegram.svg" width="18" height="16" alt="лого telegram">
-          </a>
-        </li>
-        <li class="social-media-item">
-          <span class="visually-hidden">youtube</span>
-          <a class="social-media-link" href="#">
-            <img class="social-media-img" src="images/social-links/youtube.svg" width="23" height="18" alt="лого youtube">
-          </a>
-        </li>
-      </ul>
-      <a class="footer-contact-tel" href="tel:+78128121212">+7 (812) 812-12-12</a>
-      <a class="footer-contact-link" href="#">
-        <img class="footer-contact-link-img" src="images/logo-HTML-Academy.svg" width="115" height="34" alt="лого HTMLAcademy">
-      </a>
-    </footer>
+        <a class="footer-contact-tel" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        <a class="footer-contact-link" href="#">
+          <img class="footer-contact-link-img" src="images/logo-HTML-Academy.svg" width="115" height="34" alt="лого HTMLAcademy">
+        </a>
+      </footer>
+    </div>
   </body>
 
 </html>
